@startuml
hide empty members
skinparam monochrome true
skinparam backgroundcolor transparent

abstract class Entity {
}

Entity <|-- IdentifiableEntity

abstract class IdentifiableEntity {
    Id: Guid
}

IdentifiableEntity <|-- Species

abstract class Species {
    DateOfBirth: DateOfBirth
    Gender: Gender?
    DateOfDeath: DateOfDeath
    Age: UInt32?
    IsAlive: Boolean
}

Species <|-- Animal

class Animal {
    AnimalSpecies: WellKnownAnimal?
    Name: Name
}

@enduml
